--- a/index.css
+++ b/index.css
@@ -93,7 +93,7 @@ background: lightgoldenrodyellow; }
 .goods-section3{margin: 60px 5px 0px 5px;
         background: aliceblue }
 
-h1{text-align: center;}
+.section-header{text-align: center;}
 
 .four-row-flexbox{display: flex;
     flex-wrap: wrap;
